// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`emitOpenApi > kitchen sink contract 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "Kitchen",
    "version": "2.0.0",
    "description": "Generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json. Every contract method is \`POST /<namespace>/<method>\` with the input as JSON body and the output as JSON response. Errors carry a JSON-RPC error object (JsonRpcError) in the body."
  },
  "servers": [
    {
      "url": "/"
    }
  ],
  "tags": [
    {
      "name": "customers",
      "description": "Methods of namespace \`customers\`"
    },
    {
      "name": "system",
      "description": "Methods of namespace \`system\`"
    },
    {
      "name": "events",
      "description": "Host → Web notifications (Server-Sent Events)"
    }
  ],
  "security": [],
  "paths": {
    "/customers/list": {
      "post": {
        "operationId": "customersList",
        "x-webview2-bridge-method": "customers.list",
        "tags": [
          "customers"
        ],
        "summary": "顧客一覧を取得する",
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CustomersListRequest"
              }
            }
          }
        },
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/CustomersListResponse"
                }
              }
            }
          },
          "400": {
            "$ref": "#/components/responses/InvalidParams"
          },
          "404": {
            "$ref": "#/components/responses/MethodNotFound"
          },
          "500": {
            "$ref": "#/components/responses/ServerError"
          }
        }
      }
    },
    "/customers/save": {
      "post": {
        "operationId": "customersSave",
        "x-webview2-bridge-method": "customers.save",
        "tags": [
          "customers"
        ],
        "summary": "customers.save",
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/CustomersSaveRequest"
              }
            }
          }
        },
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/CustomersSaveResponse"
                }
              }
            }
          },
          "400": {
            "$ref": "#/components/responses/InvalidParams"
          },
          "404": {
            "$ref": "#/components/responses/MethodNotFound"
          },
          "500": {
            "$ref": "#/components/responses/ServerError"
          }
        }
      }
    },
    "/system/ping": {
      "post": {
        "operationId": "systemPing",
        "x-webview2-bridge-method": "system.ping",
        "tags": [
          "system"
        ],
        "summary": "system.ping",
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/SystemPingRequest"
              }
            }
          }
        },
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/SystemPingResponse"
                }
              }
            }
          },
          "400": {
            "$ref": "#/components/responses/InvalidParams"
          },
          "404": {
            "$ref": "#/components/responses/MethodNotFound"
          },
          "500": {
            "$ref": "#/components/responses/ServerError"
          }
        }
      }
    },
    "/events": {
      "get": {
        "operationId": "events",
        "tags": [
          "events"
        ],
        "summary": "Server-Sent Events. Each \`data:\` line is one JSON-RPC notification (same as the postMessage wire format)",
        "responses": {
          "200": {
            "description": "Event stream",
            "content": {
              "text/event-stream": {
                "schema": {
                  "oneOf": [
                    {
                      "type": "object",
                      "properties": {
                        "jsonrpc": {
                          "type": "string",
                          "const": "2.0"
                        },
                        "method": {
                          "type": "string",
                          "const": "event.customerChanged"
                        },
                        "params": {
                          "$ref": "#/components/schemas/CustomerChangedEvent"
                        }
                      },
                      "required": [
                        "jsonrpc",
                        "method",
                        "params"
                      ]
                    },
                    {
                      "type": "object",
                      "properties": {
                        "jsonrpc": {
                          "type": "string",
                          "const": "2.0"
                        },
                        "method": {
                          "type": "string",
                          "const": "event.log"
                        },
                        "params": {
                          "$ref": "#/components/schemas/LogEvent"
                        }
                      },
                      "required": [
                        "jsonrpc",
                        "method",
                        "params"
                      ]
                    }
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Customer": {
        "type": "object",
        "properties": {
          "id": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          },
          "name": {
            "type": "string"
          },
          "status": {
            "$ref": "#/components/schemas/Status"
          },
          "address": {
            "$ref": "#/components/schemas/Address"
          },
          "tags": {
            "type": "array",
            "items": {
              "type": "string"
            }
          },
          "scores": {
            "type": "array",
            "items": {
              "type": "number"
            }
          },
          "attributes": {
            "type": "object",
            "propertyNames": {
              "type": "string"
            },
            "additionalProperties": {
              "type": "string"
            }
          },
          "extra": {},
          "date": {
            "type": "string",
            "description": "VB 予約語の回避を確認する"
          },
          "end": {
            "type": "boolean"
          },
          "snake_case_name": {
            "type": "string"
          },
          "nullableInt": {
            "anyOf": [
              {
                "type": "integer",
                "minimum": -9007199254740991,
                "maximum": 9007199254740991
              },
              {
                "type": "null"
              }
            ]
          },
          "optionalNullableInt": {
            "anyOf": [
              {
                "type": "integer",
                "minimum": -9007199254740991,
                "maximum": 9007199254740991
              },
              {
                "type": "null"
              }
            ]
          },
          "kind": {
            "type": "string",
            "enum": [
              "a",
              "b"
            ]
          },
          "children": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "childId": {
                  "type": "string"
                },
                "weight": {
                  "type": "number"
                }
              },
              "required": [
                "childId"
              ],
              "additionalProperties": false
            }
          },
          "meta": {
            "type": "object",
            "properties": {
              "createdBy": {
                "type": "string"
              }
            },
            "required": [
              "createdBy"
            ],
            "additionalProperties": false
          }
        },
        "required": [
          "id",
          "name",
          "status",
          "tags",
          "attributes",
          "extra",
          "date",
          "snake_case_name",
          "nullableInt",
          "kind",
          "children"
        ],
        "additionalProperties": false
      },
      "Status": {
        "type": "string",
        "enum": [
          "open",
          "in-progress",
          "closed",
          "2nd"
        ]
      },
      "Address": {
        "type": "object",
        "properties": {
          "line1": {
            "type": "string"
          },
          "line2": {
            "type": "string"
          },
          "zip": {
            "type": [
              "string",
              "null"
            ]
          }
        },
        "required": [
          "line1",
          "zip"
        ],
        "additionalProperties": false
      },
      "CustomersListRequest": {
        "type": "object",
        "properties": {
          "page": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          }
        },
        "additionalProperties": false,
        "description": "顧客一覧を取得する"
      },
      "CustomersListResponse": {
        "type": "object",
        "properties": {
          "items": {
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/Customer"
            }
          },
          "total": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          }
        },
        "required": [
          "items",
          "total"
        ],
        "additionalProperties": false
      },
      "CustomersSaveRequest": {
        "type": "object",
        "properties": {
          "customer": {
            "$ref": "#/components/schemas/Customer"
          }
        },
        "required": [
          "customer"
        ],
        "additionalProperties": false
      },
      "CustomersSaveResponse": {
        "type": "object",
        "properties": {
          "ok": {
            "type": "boolean"
          }
        },
        "required": [
          "ok"
        ],
        "additionalProperties": false
      },
      "SystemPingRequest": {
        "type": "object",
        "properties": {},
        "additionalProperties": false
      },
      "SystemPingResponse": {
        "type": "object",
        "properties": {
          "time": {
            "type": "string"
          }
        },
        "required": [
          "time"
        ],
        "additionalProperties": false
      },
      "CustomerChangedEvent": {
        "type": "object",
        "properties": {
          "id": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          },
          "status": {
            "$ref": "#/components/schemas/Status"
          }
        },
        "required": [
          "id",
          "status"
        ],
        "additionalProperties": false
      },
      "LogEvent": {
        "type": "object",
        "properties": {
          "level": {
            "type": "string",
            "enum": [
              "info",
              "warn"
            ]
          },
          "text": {
            "type": "string"
          }
        },
        "required": [
          "level",
          "text"
        ],
        "additionalProperties": false
      },
      "JsonRpcError": {
        "type": "object",
        "description": "JSON-RPC 2.0 error object. Same shape as the \`error\` member over postMessage",
        "properties": {
          "code": {
            "type": "integer",
            "description": "-32700 Parse, -32600 Invalid Request, -32601 Method not found, -32602 Invalid params, -32000.. application"
          },
          "message": {
            "type": "string"
          },
          "data": {
            "description": "Unhandled server exceptions put the exception type name here"
          }
        },
        "required": [
          "code",
          "message"
        ]
      }
    },
    "responses": {
      "InvalidParams": {
        "description": "Invalid params (JSON-RPC -32602), invalid request (-32600) or parse error (-32700)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      },
      "MethodNotFound": {
        "description": "Method not found (JSON-RPC -32601)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      },
      "ServerError": {
        "description": "Unhandled server error (JSON-RPC -32000 or other application-defined code)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      }
    }
  },
  "x-webview2-bridge": {
    "contractVersion": 1,
    "events": [
      {
        "name": "customerChanged",
        "method": "event.customerChanged",
        "schema": "#/components/schemas/CustomerChangedEvent"
      },
      {
        "name": "log",
        "method": "event.log",
        "schema": "#/components/schemas/LogEvent"
      }
    ]
  }
}
"
`;

exports[`emitOpenApi > sample contract 1`] = `
"{
  "openapi": "3.1.0",
  "info": {
    "title": "webview2-bridge contract",
    "version": "1.0.0",
    "description": "Generated by @ishibashi0112/webview2-bridge-gen from contract.schema.json. Every contract method is \`POST /<namespace>/<method>\` with the input as JSON body and the output as JSON response. Errors carry a JSON-RPC error object (JsonRpcError) in the body."
  },
  "servers": [
    {
      "url": "/"
    }
  ],
  "tags": [
    {
      "name": "parts",
      "description": "Methods of namespace \`parts\`"
    },
    {
      "name": "events",
      "description": "Host → Web notifications (Server-Sent Events)"
    }
  ],
  "security": [],
  "paths": {
    "/parts/search": {
      "post": {
        "operationId": "partsSearch",
        "x-webview2-bridge-method": "parts.search",
        "tags": [
          "parts"
        ],
        "summary": "parts.search",
        "requestBody": {
          "required": true,
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/PartsSearchRequest"
              }
            }
          }
        },
        "responses": {
          "200": {
            "description": "Success",
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/PartsSearchResponse"
                }
              }
            }
          },
          "400": {
            "$ref": "#/components/responses/InvalidParams"
          },
          "404": {
            "$ref": "#/components/responses/MethodNotFound"
          },
          "500": {
            "$ref": "#/components/responses/ServerError"
          }
        }
      }
    },
    "/events": {
      "get": {
        "operationId": "events",
        "tags": [
          "events"
        ],
        "summary": "Server-Sent Events. Each \`data:\` line is one JSON-RPC notification (same as the postMessage wire format)",
        "responses": {
          "200": {
            "description": "Event stream",
            "content": {
              "text/event-stream": {
                "schema": {
                  "type": "object",
                  "properties": {
                    "jsonrpc": {
                      "type": "string",
                      "const": "2.0"
                    },
                    "method": {
                      "type": "string",
                      "const": "event.progress"
                    },
                    "params": {
                      "$ref": "#/components/schemas/ProgressEvent"
                    }
                  },
                  "required": [
                    "jsonrpc",
                    "method",
                    "params"
                  ]
                }
              }
            }
          }
        }
      }
    }
  },
  "components": {
    "schemas": {
      "Part": {
        "type": "object",
        "properties": {
          "partNo": {
            "type": "string"
          },
          "name": {
            "type": "string"
          },
          "qty": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          },
          "updatedAt": {
            "type": "string",
            "description": "ISO 8601"
          }
        },
        "required": [
          "partNo",
          "name",
          "qty",
          "updatedAt"
        ],
        "additionalProperties": false
      },
      "PartsSearchRequest": {
        "type": "object",
        "properties": {
          "keyword": {
            "type": "string",
            "minLength": 1
          },
          "limit": {
            "type": "integer",
            "minimum": -9007199254740991,
            "maximum": 9007199254740991
          }
        },
        "required": [
          "keyword"
        ],
        "additionalProperties": false
      },
      "PartsSearchResponse": {
        "type": "object",
        "properties": {
          "items": {
            "type": "array",
            "items": {
              "$ref": "#/components/schemas/Part"
            }
          }
        },
        "required": [
          "items"
        ],
        "additionalProperties": false
      },
      "ProgressEvent": {
        "type": "object",
        "properties": {
          "percent": {
            "type": "number"
          },
          "message": {
            "type": "string"
          }
        },
        "required": [
          "percent"
        ],
        "additionalProperties": false
      },
      "JsonRpcError": {
        "type": "object",
        "description": "JSON-RPC 2.0 error object. Same shape as the \`error\` member over postMessage",
        "properties": {
          "code": {
            "type": "integer",
            "description": "-32700 Parse, -32600 Invalid Request, -32601 Method not found, -32602 Invalid params, -32000.. application"
          },
          "message": {
            "type": "string"
          },
          "data": {
            "description": "Unhandled server exceptions put the exception type name here"
          }
        },
        "required": [
          "code",
          "message"
        ]
      }
    },
    "responses": {
      "InvalidParams": {
        "description": "Invalid params (JSON-RPC -32602), invalid request (-32600) or parse error (-32700)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      },
      "MethodNotFound": {
        "description": "Method not found (JSON-RPC -32601)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      },
      "ServerError": {
        "description": "Unhandled server error (JSON-RPC -32000 or other application-defined code)",
        "content": {
          "application/json": {
            "schema": {
              "$ref": "#/components/schemas/JsonRpcError"
            }
          }
        }
      }
    }
  },
  "x-webview2-bridge": {
    "contractVersion": 1,
    "events": [
      {
        "name": "progress",
        "method": "event.progress",
        "schema": "#/components/schemas/ProgressEvent"
      }
    ]
  }
}
"
`;
